# projective-dynamics

./: CMakeLists.txt  README.md
doc/: README.md
include/geometry/: get_simple_bar_model.h  get_simple_cloth_model.h
include/pd/: constraint.h  deformable_mesh.h  deformation_gradient_constraint.h  edge_length_constraint.h  positional_constraint.h  solver.h  strain_constraint.h  tetrahedron_volume_constraint.h
include/solver/: solve.h
include/ui/: mouse_down_handler.h  mouse_move_handler.h  physics_params.h  picking_state.h  pre_draw_handler.h
src/: main.cpp  plot.cpp
src/pd/: deformable_mesh.cpp  deformation_gradient_constraint.cpp  edge_length_constraint.cpp  positional_constraint.cpp  strain_constraint.cpp  tetrahedron_volume_constraint.cpp
src/solver/: solve.cpp
src/ui/: mouse_down_handler.cpp  pre_draw_handler.cpp
